test/rbkt/Queries/zorba/syntax-error/syntax-error-13.xq
(: 
  Syntax error with an improved error message:
  unterminated direct element constructor
:)

<test
